Bug 788823 - Link wrapping breaks paragraph text incorrectly

--- a/data/webview-print.css
+++ b/data/webview-print.css
@@ -41,7 +41,7 @@ th {
         margin: 8px;
 }
 
-a {
+a.evo-awrap {
 	white-space:normal;
 	word-break:break-all;
 }
